fix avatar overlap

--- a/components/Layout/MobileHeader/MobileHeader.module.scss
+++ b/components/Layout/MobileHeader/MobileHeader.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   display: none;
+  z-index: $above;
 }
 
 .modal {
